# selective-classification

./: .gitignore  LICENSE  README.md  env.sh  pyproject.toml  requirements.txt
lists/cifar10/: test  train
lists/cifar100/: test  train
notebooks/: missclassification_detection.ipynb
scripts/: download_checkpoints.sh  image_classification.sh  plot_curves.sh  resnet_cifar.sh  results_image_classification.sh  run.sh  selection.sh
src/selcls/: metrics.py  scores.py  utils.py
src/selcls/dataset/: cifar.py
src/selcls/datasets/: __init__.py  cifar.py
src/selcls/model/: resnet18.py
src/selcls/models/: __init__.py  calibration.py  desenet.py  resnet.py  utils.py
src/selcls/models/selectors/: __init__.py  base.py  basics.py  cal.py  doctor.py  dpcal.py  entropy.py  gini.py  msp.py  odin.py  relu.py  tscal.py
src/selcls/scripts/: run_img_classification.py  selection.py  selection_method.py  train_and_evaluate_model.py
src/selcls/scripts/img_classification/: base_results.py  posteriors.py  selection_scores.py  utils.py
