[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selcls"
version = "0.0.1"
authors = [
  { name="Lautaro Estienne", email="lestienne@fi.uba.ar" },
]
description = "Experiments on Selective Classification"
readme = "README.md"
requires-python = "==3.11.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LautaroEst/selective-classification"
Issues = "https://github.com/LautaroEst/selective-classification/issues"